# FPS-Matrixmultiplikation

./: .gitignore  CMakeLists.txt  Makefile  README.md  info
docs/: fps-mm.tex
docs/plot/benchmark/test/: test1.plt
src/: HelpFunctions.c  Matrix.c  OctaMatrix.c  main.c  matrixmultiplication.c
src/include/: HelpFunctions.h  Matrix.h  OctaMatrix.h  matrixmultiplication.h
